# url_shortener

./: .dockerignore  .env.default  Cargo.toml  Dockerfile  README.md
src/: http.rs  main.rs  model.rs
src/database/: setup.rs
src/http/: api_v1.rs  general.rs
src/model/: api.rs  app_setting.rs  url.rs
