[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
rand = "0.8.5"
sha2 = "0.10.8"
ulid = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
async-trait = "0.1.79"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
dotenvy = "0.15.7"
clap = { version = "4.5.4", features = ["derive"] }
busybody = "0.3.8"
chrono = "0.4.37"
